# pytorch_hardway

./: .gitignore  README.md
cuda_warmups/: add_gpu  cuda_helloworld.ipynb  execution_conf.cu  mill_gpu  million_elem_gpu_sum.cu  million_elem_sum  million_elem_sum.cpp  multhread_gpu  multi_block  multi_block_gpu_sum.cu  multi_thread_gpu_sum.cu  perThreadHello.cu  perthread_blk_grid.cu  profileout.ncu-rep  squaring_matrix.cu
cuda_warmups/addvectors/: CMakeLists.txt  CMakeLists00.txt  README.md  addvector.cu
cuda_warmups/first_app/: CMakeLists.txt  README.md  execution_conf.cu  firstapp
cuda_warmups/nvcc_cuda_template/: CMakeLists.txt  README.md  easy_cuda_intro  easy_cuda_intro.cu  profileout.ncu-rep
cuda_warmups/square_matrix/: CMakeLists.txt  CMakeLists_nvcc.txt  README.md  squaring_matrix.cpp  squaring_matrix.cu
cuda_warmups/torchtest/: CMakeLists.txt  README.md  working_torch.cpp
cudac_notes_code/cuda_ch1_code/gpu_helloworld/: CMakeLists.txt  gpu_helloworld.cu
cudac_notes_code/cuda_ch2_code/: executingCuda_chpt2.ipynb
cudac_notes_code/cuda_ch2_code/list2_1/: CMakeLists.txt  sumArraysHostonly.cpp
cudac_notes_code/cuda_ch2_code/list2_2/: CMakeLists.txt  checkDimensions.cu
cudac_notes_code/cuda_ch2_code/list2_3/: CMakeLists.txt  defineGridBlock.cu
cudac_notes_code/cuda_ch2_code/list2_4/: CMakeLists.txt  sumArraysGPU.cu
cudac_notes_code/cuda_ch2_code/list2_5/: CMakeLists.txt  sumArraysGPUTimer.cu
cudac_notes_code/cuda_ch2_code/list2_6/: CMakeLists.txt  checkThread.cu
cudac_notes_code/cuda_ch2_code/list2_7/: CMakeLists.txt  sumArraysGPU2d.cu
cudac_notes_code/cuda_ch2_code/list2_8/: CMakeLists.txt  deviceInfo.cu
cudac_notes_code/cuda_ch3_code/: chpt_003_code.ipynb  simpleDeviceQuery.cu  simpleDivergence.cu  sumArraysGPU2dCLI.cu
cudac_notes_code/cuda_notes/: Chpt01-02Notes.txt  Chpt03Notes.txt
cudamode_lectures/lecture_002/: cudamode_lecture_002.ipynb
cudamode_lectures/lecture_002/vector_addition/: vecadd_profile.ncu-rep  vector_addition.cu
cudamode_lectures/lecture_003/: cuda.cu  cudamode_lecture_003.ipynb  main.cpp  matmul_cuda.cu  pmpp.ipynb  rgb_3d.cu  table.html
cudamode_lectures/lecture_004/: cuda_test.cu  cudamode_lecture_004.ipynb  kagglemode_lecture_004.ipynb
cudamode_lectures/lecture_005/: cudamode-lect005.ipynb
einops_practice/: 1-einops-basics.ipynb  2-einops-for-deep-learning.ipynb  3-einmix-layer.ipynb  4-pack-and-unpack.ipynb  README.md  einops_learn.ipynb  pytorch-examples.html
einops_practice/source_examples/: Pytorch.ipynb  converter.py
models-from-scratch-python/: README.md  requirements.txt
models-from-scratch-python/AdaBoost/: demo.ipynb
models-from-scratch-python/CART/: demo.ipynb
models-from-scratch-python/ID3 - Decision Tree/: demo.ipynb
models-from-scratch-python/KNN/: demo.ipynb
models-from-scratch-python/Principal Component Analysis/: demo.ipynb
models-from-scratch-python/Random Forest/: demo.ipynb
models-from-scratch-python/Support Vector Classifiers/: svc.ipynb
models-from-scratch-python/XGBoost/: demo.ipynb
practical-pytorch/: .gitignore  README.md
practical-pytorch/char-rnn-classification/: .gitignore  char-rnn-classification.ipynb
practical-pytorch/char-rnn-generation/: char-rnn-generation.ipynb
practical-pytorch/conditional-char-rnn/: conditional-char-rnn.ipynb  data.py  generate.py  model.py  train.py
practical-pytorch/glove-word-vectors/: glove-word-vectors.ipynb
practical-pytorch/reinforce-gridworld/: helpers.py  reinforce-gridworld.ipynb  reinforce-gridworld.py
practical-pytorch/seq2seq-translation/: masked_cross_entropy.py  seq2seq-translation-batched.ipynb  seq2seq-translation-batched.py  seq2seq-translation.ipynb
practical-pytorch/seq2seq-translation/images/: attention-decoder-network.dot  decoder-network.dot  encoder-network.dot
pytorch_basics/: activation_functions_visualisation.drawio  back_propagation.drawio  building_models.py  convolution_visualisation.drawio  diving_into_optimisers.py  feed_forward_fmnist.py  gradients_full_torch.py  gradients_numpy.py  gradients_pytorch.py  intro_activation_functions.py  intro_data_transforms.py  intro_dataloader.py  intro_softmax_cross_entropy.py  linear_regression_torch.py  logic_understanding.py  logistic_regression_torch.py  neuralN_fromScratch.py  nn_model_binary_class.py  nn_model_multiclass_ce.py  practice_torch.py  pytorch_methods.py  pytorch_optimizers.py  saveload.py  softmax_visualisation.drawio  trace_script.ipynb  transfer_learning.py  weights_initiation.ipynb
t5_from_scratch/: t5_main.py  t5_pytorch.py
tutorials_howtos/: bigram_model.py  char_classifier_notebook.ipynb  char_classifier_rnn.py  char_generator_rnn.ipynb  gpt_implementation.py  intro_pytorch.ipynb  languageTranslation_nnTransformer.ipynb  seq2seqTranslator.ipynb
umarj/lazy-ml/: README.md  decision_tree.ipynb  gmm.ipynb  gmm.py  kmeans.ipynb  knn.ipynb  linear_regression.py  linear_regression_gradient_descent.ipynb  linear_regression_map.ipynb  linear_regression_mle.ipynb  pca.ipynb  pca.py  svm.ipynb  utils.py
umarj/mistral-src-commented/: .gitignore  README.md  main.py  requirements.txt
umarj/mistral-src-commented/mistral/: cache.py  model.py  moe.py  rope.py  tokenizer.py
umarj/pytorch-ddpm/: .gitignore  README.md  data.py  generate_noisy_images.ipynb  train.py
umarj/pytorch-llama/: .gitignore  README.md
umarj/pytorch-lora/: README.md  lora.ipynb  svd.ipynb
umarj/pytorch-stable-diffusion/: .gitignore  README.md
umarj/pytorch-stable-diffusion/sd/: demo.ipynb
umarj/pytorch-transformer-distributed/: .gitignore  README.md  config.py  dataset.py  requirements.txt  train.py
umarj/pytorch-transformer-distributed/notes/: ddp_template.py  (+1 more)
