cmake_minimum_required(VERSION 3.8)
cmake_policy(set CMP0104 NEW)
project(checkThread LANGUAGES CXX C)
set(CMAKE_CXX_STANDARD OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
enable_language(CUDA)
find_package(CUDAToolkit REQUIRED)
set(CMAKE_CUDA_STANDARD 11)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)
add_executable(checkThread checkThread.cu)